# vidya-sakhi

./: .replit  FAQ.md  README.md  add_explanations.py  app.py  auth.py  chatbot.py  pyproject.toml  quiz_data.py  quiz_history.json  quiz_questions.json  quiz_questions_backup.json  requirements.txt  study_materials.py  users.json  utils.py
__pycache__/: auth.cpython-312.pyc.2120145396752  auth.cpython-313.pyc.1843034764464  auth.cpython-313.pyc.2033407146592  auth.cpython-313.pyc.2542703011840  auth.cpython-313.pyc.2544460997424  auth.cpython-313.pyc.2544719934640  auth.cpython-313.pyc.2561078228368  chatbot.cpython-312.pyc.2120145402464  chatbot.cpython-313.pyc.2544713364096  chatbot.cpython-313.pyc.2544713742272  chatbot.cpython-313.pyc.2561061606256  quiz_data.cpython-312.pyc.1636063400592  quiz_data.cpython-312.pyc.1636063412016  quiz_data.cpython-312.pyc.2120145396192  quiz_data.cpython-312.pyc.2120200102368  quiz_data.cpython-312.pyc.2120205211824  quiz_data.cpython-312.pyc.2120205214960  quiz_data.cpython-313.pyc.1843292700832  quiz_data.cpython-313.pyc.1843293898320  quiz_data.cpython-313.pyc.2033337410800  quiz_data.cpython-313.pyc.2033397160560  quiz_data.cpython-313.pyc.2033407502896  quiz_data.cpython-313.pyc.2053887606352  quiz_data.cpython-313.pyc.2053950418128  quiz_data.cpython-313.pyc.2153995113776  quiz_data.cpython-313.pyc.2542701002544  quiz_data.cpython-313.pyc.2561073496224  study_materials.cpython-312.pyc.1635998535776  study_materials.cpython-312.pyc.1636062655776  study_materials.cpython-312.pyc.2120145396192  utils.cpython-312.pyc.1636005640688  (+59 more)
(+1 files in other folders)
