[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gtts>=2.5.4",
    "pygame>=2.6.1",
    "reportlab>=4.4.2",
    "streamlit-lottie>=0.0.5",
    "streamlit>=1.46.0",
    "translatepy>=2.3",
    "requests>=2.32.4",
    "bcrypt>=4.3.0",
]
